[gd_scene load_steps=21 format=3 uid="uid://wkvaoylsgo3v"]

[ext_resource type="Script" path="res://hud.gd" id="1_sc8te"]
[ext_resource type="FontFile" uid="uid://ci7hujwf6b2mu" path="res://assets/fonts/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" id="2_xb2y5"]
[ext_resource type="Texture2D" uid="uid://db15doyruvh0" path="res://assets/ui/battery_bg.png" id="2_y1vnf"]
[ext_resource type="Texture2D" uid="uid://dqhe6l5vny3r3" path="res://assets/ui/teto_status/teto_status_good_1.png" id="4_72d4i"]
[ext_resource type="Texture2D" uid="uid://cae0gsy2dr8jm" path="res://assets/ui/timer_bg.png" id="5_hh4mc"]
[ext_resource type="Texture2D" uid="uid://b68vngsurxi66" path="res://assets/ui/glowstick_bg.png" id="6_1i5hq"]
[ext_resource type="Texture2D" uid="uid://cfqu3u181tha4" path="res://assets/ui/battery_progress/battery_under.png" id="6_4ldvp"]
[ext_resource type="Texture2D" uid="uid://c7yl4knsjiuc5" path="res://assets/ui/battery_progress/battery_over.png" id="7_6vdjg"]
[ext_resource type="Texture2D" uid="uid://clo0havn183iu" path="res://assets/ui/glowstick_progress/under.png" id="7_r4fii"]
[ext_resource type="Texture2D" uid="uid://c8f6y37iorb0m" path="res://assets/ui/battery_progress/battery_progress.png" id="8_32p1c"]
[ext_resource type="Texture2D" uid="uid://c2c4huuxnd0vi" path="res://assets/ui/btn/btn_normal.png" id="8_k7pux"]
[ext_resource type="Texture2D" uid="uid://bk0ehpdwqjsl3" path="res://assets/ui/glowstick_progress/over.png" id="8_yva5w"]
[ext_resource type="Texture2D" uid="uid://dhwmdbjkau0bp" path="res://assets/ui/glowstick_progress/progress.png" id="9_bwdpg"]
[ext_resource type="Texture2D" uid="uid://dc8hicjofl06l" path="res://assets/ui/btn/btn_pressed.png" id="9_gqm6j"]
[ext_resource type="Texture2D" uid="uid://d1yi3adc4w4jg" path="res://assets/ui/warning_1.png" id="10_a3nh1"]
[ext_resource type="Texture2D" uid="uid://blhmofjgga1wn" path="res://assets/ui/btn/btn_hover.png" id="10_c8qec"]
[ext_resource type="Texture2D" uid="uid://b61fd8fbq8ngg" path="res://assets/ui/warning_2.png" id="11_dafmg"]
[ext_resource type="Texture2D" uid="uid://7eemyukegvw3" path="res://assets/ui/game_over_screens/bg.png" id="15_f40uy"]
[ext_resource type="Texture2D" uid="uid://bdsaeym4vexgp" path="res://assets/ui/game_over_screens/good.png" id="16_cg34r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_itjxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_a3nh1")
}, {
"duration": 1.0,
"texture": ExtResource("11_dafmg")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sc8te")

[node name="batteryUi" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5, 5)
texture = ExtResource("2_y1vnf")

[node name="tetoUi" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -720.0
offset_right = 80.0
offset_bottom = -576.0
grow_vertical = 0
scale = Vector2(5, 5)
texture = ExtResource("4_72d4i")

[node name="timerUi" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_right = -320.0
offset_bottom = 32.0
grow_horizontal = 0
scale = Vector2(5, 5)
texture = ExtResource("5_hh4mc")

[node name="glowstickUi" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 1200.0
offset_top = 160.0
offset_right = 1280.0
offset_bottom = 320.0
scale = Vector2(5, 5)
texture = ExtResource("6_1i5hq")

[node name="batteryProgressBar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = 80.0
offset_top = 50.0
offset_right = 126.0
offset_bottom = 90.0
scale = Vector2(5, 5)
texture_under = ExtResource("6_4ldvp")
texture_over = ExtResource("7_6vdjg")
texture_progress = ExtResource("8_32p1c")

[node name="batteryLabel" type="Label" parent="batteryProgressBar"]
texture_filter = 1
offset_left = 7.2
offset_top = 7.4
offset_right = 157.2
offset_bottom = 64.4
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 128
text = "100%"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="batteryProgressBar"]
position = Vector2(25, 14)
sprite_frames = SubResource("SpriteFrames_itjxt")

[node name="audienceHealth" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = 1330.0
offset_top = 205.0
offset_right = 1357.0
offset_bottom = 303.0
scale = Vector2(5, 5)
fill_mode = 3
texture_under = ExtResource("7_r4fii")
texture_over = ExtResource("8_yva5w")
texture_progress = ExtResource("9_bwdpg")

[node name="timeSurvivedLabel" type="Label" parent="."]
offset_left = 1213.0
offset_top = 18.0
offset_right = 1588.0
offset_bottom = 131.0
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 128
text = "00:00"

[node name="gameOverScreen" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 656.0
offset_top = 400.0
offset_right = 944.0
offset_bottom = 560.0
scale = Vector2(5, 5)
pivot_offset = Vector2(144, 80)
texture = ExtResource("15_f40uy")

[node name="gameOverPicture" type="TextureRect" parent="gameOverScreen"]
offset_left = 13.6
offset_top = 12.0
offset_right = 132.6
offset_bottom = 172.0
texture = ExtResource("16_cg34r")
stretch_mode = 2

[node name="tutoButton" type="TextureButton" parent="."]
offset_left = 675.0
offset_top = 584.0
offset_right = 931.0
offset_bottom = 680.0
texture_normal = ExtResource("8_k7pux")
texture_pressed = ExtResource("9_gqm6j")
texture_hover = ExtResource("10_c8qec")

[node name="tutoLabel" type="Label" parent="tutoButton"]
texture_filter = 1
layout_mode = 0
offset_left = 18.0
offset_top = 25.0
offset_right = 318.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 48
text = "Tutorial
"

[node name="startButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -48.0
offset_right = 131.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("8_k7pux")
texture_pressed = ExtResource("9_gqm6j")
texture_hover = ExtResource("10_c8qec")

[node name="startLabel" type="Label" parent="startButton"]
texture_filter = 1
layout_mode = 0
offset_left = 30.0
offset_top = 18.0
offset_right = 218.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="timeResultLabel" type="Label" parent="."]
offset_left = 1040.0
offset_top = 312.0
offset_right = 1324.0
offset_bottom = 398.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 96
text = "00:00"

[node name="tutoMgsBg" type="Panel" parent="."]
offset_left = 893.0
offset_top = 101.0
offset_right = 1178.0
offset_bottom = 396.0

[node name="tutoMessage" type="Label" parent="tutoMgsBg"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 270.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("2_xb2y5")
theme_override_font_sizes/font_size = 32
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
"
autowrap_mode = 3

[connection signal="pressed" from="tutoButton" to="." method="_on_tuto_button_pressed"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
